--- a/escola-qualidade-vida/frontend/public/acompanhamento.html
+++ b/escola-qualidade-vida/frontend/public/acompanhamento.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/acompanhamento.css">
-    <title>Document</title>
-    
+    <title>Acompanhamento de Ocorrências</title>
 </head>
 <body>
     <header>
@@ -22,53 +21,52 @@
     <main>
         <h2>Filtrar Ocorrências</h2>
 
-    <div class="filtro">
-        <label>
-            <input type="checkbox" id="filtroAndamento" /> Em andamento
-        </label>
+        <div class="filtro">
+            <label>
+                <input type="checkbox" id="filtroAndamento" /> Em andamento
+            </label>
 
-        <label>
-            Aluno:
-            <input type="text" id="filtroAluno" placeholder="Nome do aluno">
-        </label>
+            <label>
+                Aluno:
+                <input type="text" id="filtroAluno" placeholder="Nome do aluno">
+            </label>
 
-        <label>
-            Turma:
-            <input type="text" id="filtroTurma" placeholder="Turma">
-        </label>
+            <label>
+                Turma:
+                <input type="text" id="filtroTurma" placeholder="Turma">
+            </label>
 
-        <label>
-            Período:
-            <select id="filtroPeriodo">
-                <option value="">Todos</option>
-                <option value="Manhã">Manhã</option>
-                <option value="Tarde">Tarde</option>
-                <option value="Noite">Noite</option>
-            </select>
-        </label>
+            <label>
+                Período:
+                <select id="filtroPeriodo">
+                    <option value="">Todos</option>
+                    <option value="Manhã">Manhã</option>
+                    <option value="Tarde">Tarde</option>
+                    <option value="Noite">Noite</option>
+                </select>
+            </label>
 
-        <button onclick="limparFiltros()">Limpar</button>
-    </div>
+            <button onclick="limparFiltros()">Limpar</button>
+        </div>
 
-    <table id="tabelaOcorrencias">
-        <thead>
-            <tr>
-                <th>Aluno</th>
-                <th>Turma</th>
-                <th>Período</th>
-                <th>Status</th>
-                <th>Descrição</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Ocorrências serão renderizadas aqui -->
-        </tbody>
-    </table>
+        <table id="tabelaOcorrencias">
+            <thead>
+                <tr>
+                    <th>Aluno</th>
+                    <th>Turma</th>
+                    <th>Período</th>
+                    <th>Status</th>
+                    <th>Descrição</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Ocorrências serão renderizadas aqui -->
+            </tbody>
+        </table>
 
-    <div class="mensagem" id="mensagem"></div>
-
+        <div class="mensagem" id="mensagem"></div>
     </main>
 
-<script src="./js/filtros.js"></script>
+    <script src="./js/filtros.js"></script>
 </body>
 </html>
